recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:18: error: not enough arguments for method squareSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    squareSide(levels-1);
              ^SquareKoch:20: error: not enough arguments for method squareSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    squareSide(levels-1);
              ^SquareKoch:22: error: not enough arguments for method squareSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    squareSide(levels-1);
              ^SquareKoch:24: error: not enough arguments for method squareSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    squareSide(levels-1);
              ^SquareKoch:26: error: not enough arguments for method squareSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    squareSide(levels-1);
              ^